tests/paczka1/small_fuzzy/22154991.err
Error in line 2: 7RKl00 A222 79,9
Error in line 14: RKl00 S 3,6
Error in line 10: CQb S77 72,4
